// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge snapshots default max value should be displayed 1`] = `
.c0 {
  background-color: #dfdfe3;
  border-radius: 2em;
  color: #56565a;
  font-size: 12px;
  font-weight: 600;
  padding: 0.1875em 0.5em;
  text-align: center;
}

<Badge
  count="8000"
  max={999}
  mode="default"
>
  <styled.span
    mode="default"
  >
    <span
      className="c0"
      mode="default"
    >
      999+
    </span>
  </styled.span>
</Badge>
`;

exports[`Badge snapshots should match snapshot 1`] = `
.c0 {
  background-color: #dfdfe3;
  border-radius: 2em;
  color: #56565a;
  font-size: 12px;
  font-weight: 600;
  padding: 0.1875em 0.5em;
  text-align: center;
}

<Badge
  count="10"
  max={999}
  mode="default"
>
  <styled.span
    mode="default"
  >
    <span
      className="c0"
      mode="default"
    >
      10
    </span>
  </styled.span>
</Badge>
`;

exports[`Badge snapshots text should show count and not max 1`] = `
.c0 {
  background-color: #dfdfe3;
  border-radius: 2em;
  color: #56565a;
  font-size: 12px;
  font-weight: 600;
  padding: 0.1875em 0.5em;
  text-align: center;
}

<Badge
  count="82"
  max="99"
  mode="default"
>
  <styled.span
    mode="default"
  >
    <span
      className="c0"
      mode="default"
    >
      82
    </span>
  </styled.span>
</Badge>
`;

exports[`Badge snapshots text should show max and not count 1`] = `
.c0 {
  background-color: #dfdfe3;
  border-radius: 2em;
  color: #56565a;
  font-size: 12px;
  font-weight: 600;
  padding: 0.1875em 0.5em;
  text-align: center;
}

<Badge
  count="100"
  max="99"
  mode="default"
>
  <styled.span
    mode="default"
  >
    <span
      className="c0"
      mode="default"
    >
      100
    </span>
  </styled.span>
</Badge>
`;
